Banner about added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conceptual 2 with DaisyUi</title>
+    <!-- Tailwind and DaisyUI link -->
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    
+    <div class="container mx-auto my-8 px-5 lg:px-24">
+        <div class="navbar bg-[#F85559] rounded-full px-5  ">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li> <a>Home</a> </li>
+                        <li> <a>About</a> </li>
+                        <li> <a>Blog</a> </li>
+                        <li> <a>All Fruits</a> </li>
+
+
+                    </ul>
+                    <div class="space-x-5 hidden lg:flex ">
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Blog</a>
+                        <a href="#">All Fruits</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="navbar-center hidden lg:flex gap-4">
+                <img src="images/logo.png" alt="">
+                <h5>First Fruits</h5>
+
+
+            </div>
+            <div class="navbar-end">
+                <div class="rounded-full bg-white hidden lg:flex items-center justify-between px-10 py-3">
+                    <input type="text" placeholder="Search">
+                    <img src="images/Frame.png" alt="">
+                </div>
+
+
+            </div>
+
+        </div>
+    </div>
+    <div class="container mx-auto my-8 px-5 lg:px-24">
+        <!-- Banner section -->
+        <div class="carousel w-full">
+            <!-- banner 1 -->
+            <!-- <div id="slide1" class="carousel-item relative w-full bg-[linear-gradient(45deg,rgba(0, 0, 0,0.4),rgba(0,0,0,0.1)),url(./images/banner1.png)]"> -->
+
+            <div id="slide1" class="carousel-item relative w-full flex items-center justify-center">
+                <img src="images/banner1.png" alt="">
+                <div class="absolute flex flex-col justify-center ">
+                    <h1 class="text-5xl text-white text-center">Exotic tastes at your <br> doorstep</h1>
+                    <p class="text-white text-center text-xl w-2/3 mx-auto ">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Ipsa quasi deleniti ab eaque, nemo magni perferendis fugit maxime quia illum.</p>
+                        <button class="btn btn-secondary pt-3 w-20 mx-auto">Secondary</button>
+                </div>
+
+
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+
+                </div>
+
+            </div>
+            <!-- banner 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="images/banner2.png" alt="">
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- banner 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <img src="images/banner3.png" alt="">
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- banner 4 -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <img src="images/banner4.png" alt="">
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
